--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "iconv-lite": "^0.4.23",
     "linebreak": "^0.3.0",
-    "pdfkit": "^0.8.3"
+    "pdfkit": "^0.8.3",
+    "mysql": "^2.15.0",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "brfs": "^1.6.1",
