--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "iconv-lite": "^0.4.23",
     "linebreak": "^0.3.0",
-    "pdfkit": "^0.8.3"
+    "pdfkit": "git+https://github.com/blforce/pdfkit.git"
   },
   "devDependencies": {
     "brfs": "^1.6.1",
@@ -27,7 +27,8 @@
     "sinon": "^5.0.7",
     "string-replace-webpack-plugin": "^0.1.3",
     "transform-loader": "^0.2.4",
-    "webpack": "3.11.0"
+    "webpack": "3.11.0",
+    "istanbul": "^0.4.3"
   },
   "scripts": {
     "build": "gulp build",
